Further fleshed out data model.

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,9 +11,50 @@
   "PENDRAGON.Create": "Create",
   "PENDRAGON.New": "New",
 
-  "PENDRAGON.Size": "SIZ",
-  "PENDRAGON.Dexterity": "DEX",
-  "PENDRAGON.Strength": "STR",
-  "PENDRAGON.Constitution": "CON",
-  "PENDRAGON.Appearance": "APP"
+  "PENDRAGON.Size": "Size",
+  "PENDRAGON.SIZ": "SIZ",
+  "PENDRAGON.Dexterity": "Dexterity",
+  "PENDRAGON.DEX": "DEX",
+  "PENDRAGON.Strength": "Strength",
+  "PENDRAGON.STR": "STR",
+  "PENDRAGON.Constitution": "Constituion",
+  "PENDRAGON.CON": "CON",
+  "PENDRAGON.Appearance": "Appearance",
+  "PENDRAGON.APP": "APP",
+
+  "PENDRAGON.HitPoints": "Hit Points",
+  "PENDRAGON.HP": "HP",
+  "PENDRAGON.Knockdown": "Knockdown",
+  "PENDRAGON.MajorWound": "Major Wound",
+  "PENDRAGON.Unconcious": "Unconcious",
+  "PENDRAGON.Debilitated": "Debilitated",
+  "PENDRAGON.Deterioration": "Deterioration Damage",
+  "PENDRAGON.Aggravated": "Aggravated Damage",
+  "PENDRAGON.Wounds": "Wounds",
+  "PENDRAGON.Chaste": "Chaste",
+  "PENDRAGON.Lustful": "Lustful",
+  "PENDRAGON.Energetic": "Energetic",
+  "PENDRAGON.Lazy": "Lazy",
+  "PENDRAGON.Forgiving": "Forgiving",
+  "PENDRAGON.Vengeful": "Vengeful",
+  "PENDRAGON.Generous": "Generous",
+  "PENDRAGON.Selfish": "Selfish",
+  "PENDRAGON.Honest": "Honest",
+  "PENDRAGON.Deceitful": "Deceitful",
+  "PENDRAGON.Just": "Just",
+  "PENDRAGON.Arbitrary": "Arbitrary",
+  "PENDRAGON.Merciful": "Merciful",
+  "PENDRAGON.Cruel": "Cruel",
+  "PENDRAGON.Modest": "Modest",
+  "PENDRAGON.Proud": "Proud",
+  "PENDRAGON.Prudent": "Prudent",
+  "PENDRAGON.Reckless": "Reckless",
+  "PENDRAGON.Spiritual": "Spiritual",
+  "PENDRAGON.Worldly": "Worldly",
+  "PENDRAGON.Temperate": "Temperate",
+  "PENDRAGON.Indulgent": "Indulgent",
+  "PENDRAGON.Trusting": "Trusting",
+  "PENDRAGON.Suspicious": "Suspicious",
+  "PENDRAGON.Valorous": "Valorous",
+  "PENDRAGON.Cowardly": "Cowardly"
 }
