--- a/lang/en.json
+++ b/lang/en.json
@@ -31,6 +31,7 @@
   "PENDRAGON.Deterioration": "Deterioration Damage",
   "PENDRAGON.Aggravated": "Aggravated Damage",
   "PENDRAGON.Wounds": "Wounds",
+
   "PENDRAGON.Chaste": "Chaste",
   "PENDRAGON.Lustful": "Lustful",
   "PENDRAGON.Energetic": "Energetic",
@@ -56,5 +57,38 @@
   "PENDRAGON.Trusting": "Trusting",
   "PENDRAGON.Suspicious": "Suspicious",
   "PENDRAGON.Valorous": "Valorous",
-  "PENDRAGON.Cowardly": "Cowardly"
+  "PENDRAGON.Cowardly": "Cowardly",
+
+  "PENDRAGON.Awareness": "Awareness",
+  "PENDRAGON.Chirugery": "Chirugery",
+  "PENDRAGON.Compose": "Compose",
+  "PENDRAGON.Courtesy": "Courtesy",
+  "PENDRAGON.Dancing": "Dancing",
+  "PENDRAGON.Falconry": "Falconry",
+  "PENDRAGON.Fashion": "Fashion",
+  "PENDRAGON.FirstAid": "First Aid",
+  "PENDRAGON.Flirting": "Flirting",
+  "PENDRAGON.Folklore": "Folklore",
+  "PENDRAGON.Gaming": "Gaming",
+  "PENDRAGON.Hunting": "Hunting",
+  "PENDRAGON.Intrigue": "Intrigue",
+  "PENDRAGON.Literacy": "Literacy",
+  "PENDRAGON.Orate": "Orate",
+  "PENDRAGON.Play": "Play",
+  "PENDRAGON.Recognize": "Recognize",
+  "PENDRAGON.Religion": "Religion",
+  "PENDRAGON.Sing": "Sing",
+  "PENDRAGON.Stewardship": "Stewardship",
+
+  "PENDRAGON.Battle": "Battle",
+  "PENDRAGON.Bow": "Bow",
+  "PENDRAGON.Brawling": "Brawling",
+  "PENDRAGON.Charge": "Charge",
+  "PENDRAGON.Crossbow": "Crossbow",
+  "PENDRAGON.Hafted": "Hafted",
+  "PENDRAGON.TwoHandedHafted": "Two-handed Hafted",
+  "PENDRAGON.Horsemanship": "Horsemanship",
+  "PENDRAGON.Spear": "Spear",
+  "PENDRAGON.Sword": "Sword",
+  "PENDRAGON.ThrownWeapon": "Thrown Weapon"
 }
