shortened as established convention

--- a/lang/en.json
+++ b/lang/en.json
@@ -86,7 +86,7 @@
   "PENDRAGON.Charge": "Charge",
   "PENDRAGON.Crossbow": "Crossbow",
   "PENDRAGON.Hafted": "Hafted",
-  "PENDRAGON.TwoHandedHafted": "Two-handed Hafted",
+  "PENDRAGON.TwoHandedHafted": "2H Hafted",
   "PENDRAGON.Horsemanship": "Horsemanship",
   "PENDRAGON.Spear": "Spear",
   "PENDRAGON.Sword": "Sword",
