added passion item

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,11 @@
   "PENDRAGON.Create": "Create",
   "PENDRAGON.New": "New",
 
+  "PENDRAGON.Experience": "Experience",
+  "PENDRAGON.Value": "Value",
+
+  "PENDRAGON.PassionTarget": "Target of Passion",
+
   "PENDRAGON.Age": "Age",
   "PENDRAGON.Culture": "Culture",
   "PENDRAGON.CurrentReligion": "Religion",
