--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,9 @@
   "PENDRAGON.Create": "Create",
   "PENDRAGON.New": "New",
 
+  "PENDRAGON.NewItemName": "New Item",
+  "PENDRAGON.NewPassionName": "New Passion",
+
   "PENDRAGON.Experience": "Experience",
   "PENDRAGON.Value": "Value",
 
