added armor dialogue

--- a/lang/en.json
+++ b/lang/en.json
@@ -51,6 +51,7 @@
   "PENDRAGON.Padding": "Padding",
   "PENDRAGON.Helmet": "Helmet",
   "PENDRAGON.Shield": "Shield",
+  "PENDRAGON.ArmorComponents": "Armor Components",
 
   "PENDRAGON.HitPoints": "Hit Points",
   "PENDRAGON.HP": "HP",
