zhuzhed up Armor dialogue

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,6 @@
 {
+  "PENDRAGON.Type": "Type",
+
   "PENDRAGON.ItemCreate": "Create Item",
   "PENDRAGON.ItemEdit": "Edit Item",
   "PENDRAGON.ItemDelete": "Delete Item",
