added roll dialogue

--- a/lang/en.json
+++ b/lang/en.json
@@ -130,5 +130,7 @@
   "PENDRAGON.Horsemanship": "Horsemanship",
   "PENDRAGON.Spear": "Spear",
   "PENDRAGON.Sword": "Sword",
-  "PENDRAGON.ThrownWeapon": "Thrown Weapon"
+  "PENDRAGON.ThrownWeapon": "Thrown Weapon",
+
+  "PENDRAGON.RollOptions": "Roll Options"
 }
